--- a/Footer Section/Challenge_1/index.html
+++ b/Footer Section/Challenge_1/index.html
@@ -13,12 +13,12 @@
   <body>
     <div class="footer">
       <div class="heading">
-        <h2>ABCDEF<sup>&trade;</sup></h2>
+        <h2>ABCDEF<span class="super">&trade;</span></h2>
       </div>
       <div class="content">
         <div class="services">
           <h4>Services</h4>
-          <p><a href="#">App developmen</a></p>
+          <p><a href="#">App development</a></p>
           <p><a href="#">Web development</a></p>
           <p><a href="#">DevOps</a></p>
           <p><a href="#">Web designing</a></p>
@@ -35,7 +35,7 @@
             <a href="#"><i class="fab fa-github"></i> Github</a>
           </p>
           <p>
-            <a href="#"><i class="fab fa-codepen"></i> Meta</a>
+            <a href="#"><i class="fab fa-codepen"></i> Codepen</a>
           </p>
           <p>
             <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
