--- a/Footer Section/Challenge_2/index.html
+++ b/Footer Section/Challenge_2/index.html
@@ -4,76 +4,82 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/66aa7c98b3.js"
+    <title>Footer 2</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
       crossorigin="anonymous"
-    ></script>
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./style.css" />
-    <title>iNeuron</title>
   </head>
   <body>
-    <footer>
+    <div class="footer">
+      <div class="top">
+        <div class="logo-details">
+          <h1><i class="fa-brands fa-slack"></i> Logo</h1>
+        </div>
+        <div class="socials">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+      </div>
+      <hr />
       <div class="content">
-        <div class="top">
-          <div class="logo-details">
-            <i class="fab fa-slack"></i>
-            <span class="logo_name">Logo</span>
-          </div>
-          <div class="media-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-          </div>
+        <div class="company">
+          <h2>Company</h2>
+          <p><a href="#">Home</a></p>
+          <p><a href="#">Contact us</a></p>
+          <p><a href="#">About us</a></p>
+          <p><a href="#">Get started</a></p>
         </div>
-        <div class="link-boxes">
-          <ul class="box">
-            <li class="link_name">Company</li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Contact us</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Get started</a></li>
-          </ul>
-          <ul class="box">
-            <li class="link_name">Services</li>
-            <li><a href="#">App design</a></li>
-            <li><a href="#">Web design</a></li>
-            <li><a href="#">Logo design</a></li>
-            <li><a href="#">Banner design</a></li>
-          </ul>
-          <ul class="box">
-            <li class="link_name">Account</li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">My account</a></li>
-            <li><a href="#">Prefrences</a></li>
-            <li><a href="#">Purchase</a></li>
-          </ul>
-          <ul class="box">
-            <li class="link_name">Courses</li>
-            <li><a href="#">HTML & CSS</a></li>
-            <li><a href="#">JavaScript</a></li>
-            <li><a href="#">Photography</a></li>
-            <li><a href="#">Photoshop</a></li>
-          </ul>
-          <ul class="box input-box">
-            <li class="link_name">Subscribe</li>
-            <li><input type="text" placeholder="Enter your email" /></li>
-            <li><input type="button" value="Subscribe" /></li>
-          </ul>
+        <div class="services">
+          <h2>Services</h2>
+          <p><a href="#">App design</a></p>
+          <p><a href="#">Web design</a></p>
+          <p><a href="#">Logo design</a></p>
+          <p><a href="#">Banner design</a></p>
+        </div>
+        <div class="account">
+          <h2>Account</h2>
+          <p><a href="#">Profile</a></p>
+          <p><a href="#">My account</a></p>
+          <p><a href="#">Preferences</a></p>
+          <p><a href="#">Purchase</a></p>
+        </div>
+        <div class="courses">
+          <h2>Courses</h2>
+          <p><a href="#">HTML &amp; CSS</a></p>
+          <p><a href="#">JavaScript</a></p>
+          <p><a href="#">Photography</a></p>
+          <p><a href="#">Photoshop</a></p>
+        </div>
+        <div class="subscribe">
+          <h2>Subscribe</h2>
+          <form action="" method="GET">
+            <input
+              type="email"
+              name="user-email"
+              placeholder="Enter your email"
+              required
+            /><br /><br />
+            <button type="submit">Subscribe</button>
+          </form>
         </div>
       </div>
-      <div class="bottom-details">
-        <div class="bottom_text">
-          <span class="copyright_text"
-            >Copyright © 2021 <a href="#">Logo.</a>All rights reserved</span
-          >
-          <span class="policy_terms">
-            <a href="#">Privacy policy</a>
-            <a href="#">Terms & condition</a>
-          </span>
-        </div>
-      </div>
-    </footer>
+      <footer>
+        <p class="copyright">
+          Copyright &copy; 2021 <a href="#">Logo.</a> All rights reserved
+        </p>
+        <p class="policy-terms">
+          <a href="#"> Privacy policy.</a>
+          <a href="#">Terms &amp; Conditions</a>
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
