--- a/FormChallenges/Challenge_2/index.html
+++ b/FormChallenges/Challenge_2/index.html
@@ -9,18 +9,20 @@
   </head>
   <body>
     <div class="center">
-      <h1>Our Newsletter</h1>
+      <div class="header">
+        <h1>Our Newsletter</h1>
+      </div>
       <form>
         <div class="inputbox">
-          <input type="text" required="required" />
+          <input type="text" placeholder="Email" required="required" />
           <span>Email</span>
         </div>
         <div class="inputbox">
-          <input type="text" required="required" />
+          <input type="text" placeholder="Password" required="required" />
           <span>Password</span>
         </div>
         <div class="inputbox">
-          <input type="button" value="submit" />
+          <input type="button" value="Submit" />
         </div>
       </form>
     </div>
