--- a/FormChallenges/Challenge_1/index.html
+++ b/FormChallenges/Challenge_1/index.html
@@ -5,24 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <title>Form 1</title>
   </head>
   <body>
     <div class="form">
       <div class="title">Welcome</div>
       <div class="subtitle">Let's create your account!</div>
       <div class="input-container ic1">
-        <input id="firstname" class="input" type="text" placeholder=" " />
+        <input
+          id="firstname"
+          class="input"
+          type="text"
+          placeholder="First name"
+        />
         <div class="cut"></div>
         <label for="firstname" class="placeholder">First name</label>
       </div>
       <div class="input-container ic2">
-        <input id="lastname" class="input" type="text" placeholder=" " />
+        <input
+          id="lastname"
+          class="input"
+          type="text"
+          placeholder="Last name"
+        />
         <div class="cut"></div>
         <label for="lastname" class="placeholder">Last name</label>
       </div>
-      <div class="input-container ic2">
-        <input id="email" class="input" type="text" placeholder=" " />
+      <div class="input-container ic3">
+        <input id="email" class="input" type="text" placeholder="Email" />
         <div class="cut cut-short"></div>
         <label for="email" class="placeholder">Email</label>
       </div>
