--- a/NavbarChallenges/Challenge_2/index.html
+++ b/NavbarChallenges/Challenge_2/index.html
@@ -8,34 +8,34 @@
     <title>iNeuron</title>
   </head>
   <body>
-    <ul>
-      <li><a>Home</a></li>
-      <li>
+    <ul class="nav-menu">
+      <li class="nav-items"><a>Home</a></li>
+      <li class="nav-items">
         <a>About</a>
-        <ul>
+        <ul class="about">
           <li><a>iNeuron One</a></li>
           <li><a>iNeuron Two</a></li>
           <li><a>iNeuron Three</a></li>
           <li><a>iNeuron Four</a></li>
         </ul>
       </li>
-      <li>
+      <li class="nav-items">
         <a>News</a>
-        <ul>
+        <ul class="news">
           <li><a>iNeuron One</a></li>
           <li><a>iNeuron Two</a></li>
           <li><a>iNeuron Three</a></li>
           <li><a>iNeuron Four</a></li>
         </ul>
       </li>
-      <li>
+      <li class="nav-items">
         <a>Contact</a>
-        <ul>
+        <ul class="contact">
           <li><a>iNeuron One</a></li>
           <li><a>iNeuron Two</a></li>
         </ul>
       </li>
-      <li><a>iNeuron </a></li>
+      <li class="nav-items"><a>iNeuron </a></li>
     </ul>
   </body>
 </html>
