--- a/TableChallenges/Challenge_1/index.html
+++ b/TableChallenges/Challenge_1/index.html
@@ -10,21 +10,27 @@
   <body>
     <div class="container">
       <h1>iNeuron</h1>
-       <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere labore officiis odio?</h2>
+      <h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere labore
+        officiis odio?
+      </h2>
       <div class="yo">
-      <h3>Contact Us</h3>
-      <p>Name : <input type="text" /></p>
-      <p>Email : <input type="email" name="email" id=""> </p>
-      <p>Mobile No. : <input type="number" name="number" id="number" /></p>
-      <p>Service You Want :<select name="card" id="card"></p>
-      <option value="">--Our Services--</option>
-      <option value="card">SEO</option>
-      <option value="card">Web Development</option>
-      <option value="card">Content Creation</option>
-  </select>
-      <p>Message : <input type="textarea"></p>
-     <button type="submit"><b>Submit</b></button>
-       </div>
+        <h3>Contact Us</h3>
+        <p>Name : <input type="text" /></p>
+        <p>Email : <input type="email" name="email" id="" /></p>
+        <p>Mobile No. : <input type="number" name="number" id="number" /></p>
+        <p>
+          Service You Want :
+          <select name="card" id="card">
+            <option value="">--Our Services--</option>
+            <option value="card">SEO</option>
+            <option value="card">Web Development</option>
+            <option value="card">Content Creation</option>
+          </select>
+        </p>
+        <p>Message : <input type="textarea" /></p>
+        <button type="submit"><b>Submit</b></button>
+      </div>
     </div>
   </body>
 </html>
