updated css code

--- a/Footer Section/Challenge_2/index.html
+++ b/Footer Section/Challenge_2/index.html
@@ -76,7 +76,7 @@
           Copyright &copy; 2021 <a href="#">Logo.</a> All rights reserved
         </p>
         <p class="policy-terms">
-          <a href="#"> Privacy policy.</a>
+          <a href="#"> Privacy policy</a>
           <a href="#">Terms &amp; Conditions</a>
         </p>
       </footer>
