--- a/NavbarChallenges/Challenge_3/index.html
+++ b/NavbarChallenges/Challenge_3/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="wrap">
-      <!-- <div class="ribbon">
+      <div class="ribbon">
         <i></i>
         <i></i>
         <i></i>
         <i></i>
-      </div> -->
+      </div>
       <div class="nav">
         <a href="#">Home</a>
         <a href="#">News</a>
